--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
         <div class="row">
             <div class="col">
-                <a href="#"><span class="fab fa-twitter"></span></a>
-                <a href="#"><span class="fab fa-facebook-f"></span></a>
-                <a href="#"><span class="fab fa-github"></span></a>   
+                <a href="https://www.linkedin.com/company/aimcodes"><span class="fab fa-linkedin"></span></a>
+                <a href="https://www.facebook.com/aimcodes"><span class="fab fa-facebook-f"></span></a>
+                <a href="https://github.com/aimcodes"><span class="fab fa-github"></span></a>   
                 
             </div>
         </div>
